@@ -1,0 +1,32 @@
+<h1>K-pop風暴來襲！Lisa首次亞洲巡迴、Seventeen公佈巡迴城市、Kiss of Life新專輯發行</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Gjz7AQQWKZo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>根據報導，Blackpink成員Lisa將於11月首次以個人身份訪問亞洲粉絲，巡迴城市包括新加坡、曼谷、雅加達、高雄和香港。</p>
+<p>Lisa最近獲得了2024年MTV音樂錄影帶大獎的最佳K-pop獎，並將於本週末在紐約舉行的全球公民音樂節中擔任主演。她的歌曲“Rockstar”在告示牌熱門100榜單中排名第70位，這是她作為個人音樂家的最高排名。</p>
+<h2>亞洲巡迴城市名單出爐！Seventeen正式公佈</h2>
+<p>Seventeen於周三公佈了其“Right Here”巡迴演唱會的亞洲站城市，包括菲律賓、 新加坡、雅加達和曼谷等城市。巡迴演唱會將於1月18日至2月15日舉辦，共27場演出。</p>
+<p>該組合將於10月12-13日在韓國舉行演唱會，然後前往美國在五個城市表演。日本將是該組合的下一站，將舉辦五場巨蛋演唱會。</p>
+<h2>第三張迷你專輯即將由Kiss of Life發行</h2>
+Kiss of Life即將發行其第三張迷你專輯，粉絲們可以期待新的音樂作品。<h2>Kiss of Life 將發行第三張迷你專輯“Lose Yourself”</h2>
+<p>女子組合Kiss of Life 將於10月15日發行其第三張迷你專輯“Lose Yourself”。這張專輯距離其數位單曲“Sticky”發行已經有三個月了，該單曲為該組合贏得了兩個電視音樂榜單的獎項。</p>
+<p>該單曲專輯在告示牌200榜單中排名第87位，這是該組合的首次進榜，主打曲也在告示牌全球200榜單（不包括美國）中排名第51位。</p>
+<h3>首次國際巡迴演唱會“Kiss Road”</h3>
+<p>與此同時，該四人組正在籌備其首次國際巡迴演唱會“Kiss Road”，將於10月26日在首爾啟動。從11月10日開始，該組合將在美國和加拿大18個城市巡迴演出，直到12月中旬。所有演唱會門票均已售罄，並新增了三場演出，同時更改了兩個演唱會場地以容納更多粉絲。</p>
+<ul>
+<li>巡迴演唱會日期：10月26日 - 12月中旬</li>
+<li>巡迴城市：美國和加拿大18個城市</li>
+<li>門票狀況：已售罄，並新增了三場演出</li>
+<p></ul></p>
+<h2>告示牌200榜單：ENHYPEN（엔하이픈）連續10周保持強勢</h2>
+<p>ENHYPEN（엔하이픈）的第二張錄音室專輯《ROMANCE:UNTOLD》已經在告示牌200榜單上停留了10周，截至9月28日的榜單排名為第199位。</p>
+<p>該專輯於7月份首次登上主要專輯榜單，排名第二，目前是該組合在榜單上停留時間最長的專輯。以下是該專輯的一些成績：</p>
+<ul>
+<li>發行首周銷量超過200萬張</li>
+<li>在10個地區的iTunes熱門專輯榜上排名第一</li>
+<li>登上了日本公信榜的周榜和周合榜榜首</li>
+<li>在日本獲得了白金認證</li>
+<p></ul></p>
+<p>據報導，該專輯的改版將於11月中旬推出，距離原版專輯發行已經有四個月的時間。</p>
+
+<p>資料來源： Korea Herald</p>
