@@ -24,3 +24,4 @@ https://www.koreaherald.com/view.php?ud=20240926050668
 https://www.koreaherald.com/view.php?ud=20240926050629
 https://www.koreaherald.com/view.php?ud=20240925050626
 https://www.koreaherald.com/view.php?ud=20240925050621
+https://www.koreaherald.com/view.php?ud=20240925050613
